crates/toml_edit/tests/fixtures/invalid/string/multiline-escape-space.stderr
TOML parse error at line 2, column 9
  |
2 |   foo \ \n
  |         ^
Invalid escape sequence
Expected `b`, `f`, `n`, `r`, `t`, `u`, `U`, `\`, `"`
